<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>luffy_bot_description</name>
  <version>0.0.0</version>

  <description>Robot description package for luffy_bot, compatible with ROS 2 Jazzy and Gazebo Harmonic.</description>
  <maintainer email="axelniato@gmail.com">Axel NIATO</maintainer>
  <license>MIT</license>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
